Changelog of flooding-base
==========================


1.40 (unreleased)
-----------------

- Update smartclient to v9.0.


1.39 (2013-08-14)
-----------------

- Set projection to maplayer in config.js.


1.38 (2013-07-12)
-----------------

- Fix OpenStreetMap layer.


1.37 (2013-06-18)
-----------------

- Fix bug in NGeneral.js.


1.36 (2013-06-12)
-----------------

- Extended intervalFormatter to use an interval > 30 days.

1.35 (2012-12-20)
-----------------

- Fix widht of IFrame for Table, Importeren, Exporteren (removed float:left style from flooding_base/static/weblib/isomorphic/system/modules/ISC_Core.js


1.34 (2012-12-06)
-----------------

- Added functionality to use a 3di form on creating 3di scenario.

1.33 (2012-11-20)
-----------------

Added gaug.es tracking Javascript to the gui index.html because Joep
wants to track the site.


1.32 (2012-10-19)
-----------------

Add Javascript that can open a specific project/scenario upon loading
the homepage.

Get the information about which scenario to open from the session (it
is set in a view in flooding-lib).

Some cleanup in Javascript.


1.31 (2012-09-21)
-----------------

Changed Javascript, now showing an (I) icon link after some breaches
(only works with new services.py from flooding-lib).


1.30 (2012-08-16)
-----------------

Increased length of slug field of Text model, 20 was too short.


1.29 (2012-07-31)
-----------------

Fixed bug with showing result animations; didn't change rootUrl to
flooding_config.root_url in some places.


1.28 (2012-07-26)
-----------------

Refactor Text.get() so that it works nicely with templates (it always
returns SafeString instances so they aren't escaped anymore in the
template) and gives a helpful reminder text where they are used in the
template while there is no text entered in the admin yet.


1.27 (2012-07-19)
-----------------

Cleaned up index.html. Made header background image work and uses the